# archdown

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
openspec/: README.md
openspec/specs/: archdown-core.md  cleanup-command.md  list-command.md  outdated-command.md  search-command.md  update-command.md  uses-command.md  which-command.md
src/archdown/: cli.py  info.py  listing.py  search.py  state.py  uses.py  which.py
tests/: test_cli.py  test_info.py  test_listing.py  test_search.py  test_state.py  test_uses.py  test_which.py
