[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "archdown"
version = "0.1.0"
description = "A friendly Homebrew-style wrapper over pacman/AUR helpers for Arch Linux"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Nohj" }
]
keywords = ["arch", "pacman", "yay", "paru", "aur", "cli"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Installation/Setup",
  "Topic :: System :: Systems Administration"
]

[project.scripts]
archdown = "archdown.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
