[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "archdown"
dynamic = ["version"]
description = "A friendly Homebrew-style wrapper over pacman/AUR helpers for Arch Linux"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "archdown contributors" }
]
keywords = ["arch", "pacman", "yay", "paru", "aur", "cli"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Installation/Setup",
  "Topic :: System :: Systems Administration"
]

[project.urls]
Homepage = "https://github.com/vitalNohj/archdown"
Repository = "https://github.com/vitalNohj/archdown"
Issues = "https://github.com/vitalNohj/archdown/issues"
Changelog = "https://github.com/vitalNohj/archdown/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]

[project.scripts]
archdown = "archdown.cli:main"
ad = "archdown.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { attr = "archdown._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
